trunk/Archive/04d0b7c77ef70dbae87b9f16b63db802-3ac4366c03bbdf3b770d4e4edaa157c5/output
+ clang++ -fno-elide-constructors -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp:4:9: error: expected ';' at end of declaration
void f() static_assert(std::is_same< T, int >::value)
        ^
        ;
main.cpp:4:38: error: use of undeclared identifier 'T'
void f() static_assert(std::is_same< T, int >::value)
                                     ^
2 errors generated.
